<resources>

    <string name="app_name">WeGo</string>
    <string name="action_settings">Settings</string>
	<string name="sport">运动</string>
	<string name="plan">计划</string>
	<string name="history">历史</string>
	<string name="appointment">约跑</string>
	<string name="more">更多</string>
	<string name="totalGrade">总成绩</string>
	<string name="grade">成绩</string>
	<string name="Calorie">卡路里</string>
	<string name="timeCost">时长</string>
	<string name="runCount">次数</string>
	<string name="distance">路程</string>
	<string name="averageSpeed">平均速度</string>
	<string name="step">步数</string>
	<string name="zero">0</string>
	<string name="finish">完成</string>
	<string name="concel">取消</string>
	<string name="pause">暂停</string>
	<string name="started">计步已经开始</string>
	<string name="stopped">计步已经停止</string>
	<string name="notification_subtitle">计步正在进行</string>
	<string name="restart">继续</string>
	<string name="runningTitle">跑步计时</string>
	<string name="setcalorie">卡路里:</string>
	<string name="setstep">步数：</string>
	<string name="zeroTime">00:00</string>
	<string name="desireColarie">计划卡路里:</string>
	<string name="desireStep">计划步数:</string>
	<string name="done">确定</string>
</resources>
