<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wego.FirstActivity"
    android:orientation="vertical">
	
    <LinearLayout
	    android:layout_width="fill_parent"  
	    android:layout_height="wrap_content"  
	    android:orientation="vertical"  
	    android:layout_weight="3">  
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/runningTitle"
	        android:textSize="24sp"/>
	    <LinearLayout
	        android:layout_width="fill_parent"  
		    android:layout_height="fill_parent"  
		    android:orientation="vertical">
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:orientation="horizontal"
	            android:baselineAligned="false">
   				
	           
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:baselineAligned="false"
	            android:layout_gravity="center"
	            android:orientation="vertical" >
                <LinearLayout 
                    android:baselineAligned="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <LinearLayout
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:gravity="center"
		                android:orientation="horizontal">
			            <ImageView
			                android:layout_width="@dimen/iconSize"
			                android:layout_height="@dimen/iconSize"
			                android:contentDescription="@string/Calorie"
			                android:src="@drawable/step" />	
			            <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/step"		              
			                android:textSize="@dimen/runningSubtitleTextSize" />
			            <TextView
			                android:id="@+id/runningStepText"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/zero"
			                android:layout_marginLeft="5dp"
			                android:textSize="25sp" 
			                android:textStyle="bold"/>
			        </LinearLayout>
		            
			        <LinearLayout 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center"
			            android:orientation="horizontal"
			            android:layout_weight="1">
			            <ImageView
			                android:layout_width="@dimen/iconSize"
			                android:layout_height="@dimen/iconSize"
			                android:contentDescription="@string/timeCost"
			                android:src="@drawable/time" />
			            <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/timeCost"
			                android:textSize="@dimen/runningSubtitleTextSize"/>
			            <!-- TextView
			                android:id="@+id/runningTimeText"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/zero"
			                android:layout_marginLeft="5dp"
			                android:textSize="25sp" 
			                android:textStyle="bold"/-->
			            <TextView  
							android:id ="@+id/timeTextView"  
							android:layout_width="wrap_content"  
							android:layout_height="wrap_content"  
							android:layout_marginLeft="5dp"
							android:textColor="#00FF00"  
							android:textSize="25sp" 
			                android:textStyle="bold"
			                android:text="@string/zeroTime"
							/>
			        </LinearLayout>
			        <LinearLayout 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center"
			            android:orientation="horizontal"
			            android:layout_weight="1">
			            <ImageView
			                android:id="@+id/distanceImg"
			                android:layout_width="@dimen/iconSize"
			                android:layout_height="@dimen/iconSize"
			                android:contentDescription="@string/distance"
			                android:src="@drawable/distance" />
			            <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/distance"
			                android:textSize="@dimen/runningSubtitleTextSize"/>
			            <TextView
			                android:id="@+id/distanceText"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/zero"
			                android:layout_marginLeft="5dp"
			                android:textSize="25sp" 
			                android:textStyle="bold"/>
			        </LinearLayout>
	            	
			    </LinearLayout>
			    
                 <LinearLayout 
                    android:baselineAligned="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
		            <LinearLayout
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:gravity="center"
		                android:orientation="horizontal">
			            <ImageView
			                android:layout_width="@dimen/iconSize"
			                android:layout_height="@dimen/iconSize"
			                android:contentDescription="@string/runCount"
			                android:src="@drawable/count" />	
			            <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/averageSpeed"
			                android:textSize="@dimen/runningSubtitleTextSize" />
			            <TextView
			                android:id="@+id/averageSpeed"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/zero"
			                android:layout_marginLeft="5dp"
			                android:textSize="25sp" 
			                android:textStyle="bold"/>
			        </LinearLayout>
			        
			        
			        <LinearLayout
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:gravity="center"
		                android:orientation="horizontal">
			            <ImageView
			                android:layout_width="@dimen/iconSize"
			                android:layout_height="@dimen/iconSize"
			                android:contentDescription="@string/Calorie"
			                android:src="@drawable/calorie" />	
			            <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/Calorie"		              
			                android:textSize="@dimen/runningSubtitleTextSize" />
			            <TextView
			                android:id="@+id/calorieRunningText"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/zero"
			                android:layout_marginLeft="5dp"
			                android:textSize="25sp" 
			                android:textStyle="bold"/>
			        </LinearLayout>
			   </LinearLayout>
	        </LinearLayout>
	    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
    	android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="center_horizontal"
		    android:layout_weight="1">
	        
	        <Button
	            android:id="@+id/finish"       
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:background="@drawable/buttonselector"
	            android:text="@string/finish"    
	            android:textSize="@dimen/buttonSize"/>
        </LinearLayout>
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:gravity="center_horizontal"
		    android:layout_weight="1">
	        <Button
	            android:id="@+id/pause"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/buttonselector"
	            android:gravity="center"
	            android:text="@string/pause" 
	            android:enabled="true"
	            android:textSize="@dimen/buttonSize"/>
	        <Button
	            android:id="@+id/restart"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/buttonselector"
	            android:gravity="center"
	            android:text="@string/restart" 
	            android:enabled="false"
	            android:visibility="gone"
	            android:textSize="@dimen/buttonSize"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

