<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wego.FirstActivity"
    tools:ignore="MergeRootFrame"  
    android:orientation="vertical">
	
    <LinearLayout
	    android:layout_width="fill_parent"  
	    android:layout_height="wrap_content"  
	    android:orientation="vertical"  
	    android:layout_weight="1">  
	    <TextView 
	        android:id="@+id/totalGrade"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/totalGrade"
	        android:textSize="30sp"/>
	    <LinearLayout
	        android:layout_width="fill_parent"  
		    android:layout_height="fill_parent"  
		    android:orientation="vertical">
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:orientation="horizontal"
	            android:baselineAligned="false">
   				
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:gravity="center"
	                android:orientation="horizontal">
		            <ImageView
		                android:id="@+id/caloriePhoto"
		                android:layout_width="@dimen/iconSize"
		                android:layout_height="30dp"
		                android:contentDescription="@string/Calorie"
		                android:src="@drawable/calorie" />	
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/Calorie"
		                android:textSize="@dimen/runningSubtitleTextSize" />
		            <TextView
		                android:id="@+id/calorieText"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/zero"
		                android:layout_marginLeft="5dp"
		                android:textSize="25sp" 
		                android:textStyle="bold"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:orientation="horizontal"
		            android:layout_weight="1">
		            <ImageView
		                android:id="@+id/totalTimeImg"
		                android:layout_width="@dimen/iconSize"
		                android:layout_height="30dp"
		                android:contentDescription="@string/timeCost"
		                android:src="@drawable/time" />
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/timeCost"
		                android:textSize="@dimen/runningSubtitleTextSize"/>
		            <TextView
		                android:id="@+id/totalTimeText"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/zero"
		                android:layout_marginLeft="5dp"
		                android:textSize="25sp" 
		                android:textStyle="bold"/>
		        </LinearLayout>
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:baselineAligned="false"
	            android:layout_gravity="center"
	            android:orientation="horizontal" >

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:gravity="center"
	                android:orientation="horizontal">
		            <ImageView
		                android:id="@+id/count"
		                android:layout_width="@dimen/iconSize"
		                android:layout_height="30dp"
		                android:contentDescription="@string/runCount"
		                android:src="@drawable/count" />	
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/runCount"
		                android:textSize="@dimen/runningSubtitleTextSize" />
		            <TextView
		                android:id="@+id/runCountText"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/zero"
		                android:layout_marginLeft="5dp"
		                android:textSize="25sp" 
		                android:textStyle="bold"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:orientation="horizontal"
		            android:layout_weight="1">
		            <ImageView
		                android:id="@+id/distanceImg"
		                android:layout_width="@dimen/iconSize"
		                android:layout_height="30dp"
		                android:contentDescription="@string/distance"
		                android:src="@drawable/distance" />
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/distance"
		                android:textSize="@dimen/runningSubtitleTextSize"/>
		            <TextView
		                android:id="@+id/distanceText"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/zero"
		                android:layout_marginLeft="5dp"
		                android:textSize="25sp" 
		                android:textStyle="bold"/>
		        </LinearLayout>
	        </LinearLayout>
	    </LinearLayout>
    </LinearLayout>
    <RelativeLayout
    	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">

        <Button
            android:id="@+id/sportButton"       
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:background="@drawable/buttonselector"
            android:layout_centerHorizontal="true"
            android:text="@string/sport"    
            android:textSize="@dimen/buttonSize"/>

        <Button
            android:id="@+id/planButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonselector"
            android:layout_below="@id/sportButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/plan" 
            android:textSize="@dimen/buttonSize"/>

	</RelativeLayout>
</LinearLayout>

