<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:gravity="center"
        	android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:gravity="center"
        	android:layout_weight="1">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/setcalorie"
	            android:textSize="@dimen/planTextSize"/>
	        <EditText
	            android:id="@+id/setCalorie"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="number"
	            android:textSize="@dimen/planTextSize"/>
        </LinearLayout>
		<LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:gravity="center"
        	android:layout_weight="1">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/setstep"
	            android:textSize="@dimen/planTextSize"/>
	        <EditText
	            android:id="@+id/setStep"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="number"
	            android:textSize="@dimen/planTextSize"/>

        </LinearLayout>
    </LinearLayout>
	
    <LinearLayout 
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
		<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
			<Button
	            android:id="@+id/planconcelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/buttonselector"
	            android:layout_marginTop="10dp"
	            android:text="@string/concel" 
	            android:gravity="center"
	            android:textSize="@dimen/buttonSize"/>
    	</LinearLayout>
    	
		<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
			<Button
	            android:id="@+id/planfinishButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/buttonselector"
	            android:gravity="center"
	            android:layout_marginTop="10dp"
	            android:text="@string/finish" 
	            android:textSize="@dimen/buttonSize"/>
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
